Modify h3 bottom border to prevent text overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,8 +15,8 @@ h3 {
     border-bottom: 1px solid rgb(0, 0, 0);
     margin: auto;
     margin-top: 20px; 
-    margin-bottom: 20px; 
-    width: 400px;
+    margin-bottom: 20px;
+    width: 500px;   
 }
 
 h4 {
